Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
Note: currently timezone database is not available on windows so timezone aware operations will fail.
We're using tz.h library which needs an updated timezone database to correctly handle timezoned timestamps. See installation instructions.
We have the following options for getting a timezone database:
- local (non-windows) OS timezone database - no work required.
- arrow bundled folder - we could bundle the database at build time for windows. Database would slowly go stale.
- download it from IANA Time Zone Database at runtime - tz.h gets the database at runtime, but curl (and 7-zip on windows) are required.
- local user-provided folder - user could provide a location at buildtime. Nice to have.
- allow runtime configuration - at runtime say: "the tzdata can be found at this location"
For more context see: ARROW-12980 and PEP 615.
Attachments
Issue Links
- blocks
-
ARROW-14442 [R] fix behaviour when converting timestamps with "" as tzone
- Resolved
- is related to
-
ARROW-14643 [C++] Support cast from timestamp[UTC] to string on Windows
- Open
-
ARROW-16073 [R] clean-up date time unit testing once tzdb is available on Windows
- Resolved
- relates to
-
ARROW-16054 [Python] Use tzdata timezone database on Windows
- Open
- links to