r/R/dplyr-funcs-datetime.R
@@ -15,6 +15,15 @@
 # specific language governing permissions and limitations
 # under the License.
 
+check_time_locale <- function(locale = Sys.getlocale("LC_TIME")) {
+  if (tolower(Sys.info()[["sysname"]]) == "windows" & locale != "C") {
+    # MingW C++ std::locale only supports "C" and "POSIX"
+    stop(paste0("On Windows, time locales other than 'C' are not supported in Arrow. ",
+                "Consider setting `Sys.setlocale('LC_TIME', 'C')`"))
+  }
+  locale
+}
+
 register_bindings_datetime <- function() {
   register_binding("strptime", function(x, format = "%Y-%m-%d %H:%M:%S", tz = NULL,
                                         unit = "ms") {
@@ -48,7 +57,7 @@ register_bindings_datetime <- function() {
     } else {
       ts <- x
     }
-    Expression$create("strftime", ts, options = list(format = format, locale = Sys.getlocale("LC_TIME")))
+    Expression$create("strftime", ts, options = list(format = format, locale = check_time_locale()))
   })
 
   register_binding("format_ISO8601", function(x, usetz = FALSE, precision = NULL, ...) {
@@ -95,7 +104,7 @@ register_bindings_datetime <- function() {
       } else {
         format <- "%A"
       }
-      return(Expression$create("strftime", x, options = list(format = format, locale = locale)))
+      return(Expression$create("strftime", x, options = list(format = format, locale = check_time_locale(locale))))
     }
 
     Expression$create("day_of_week", x, options = list(count_from_zero = FALSE, week_start = week_start))
@@ -134,7 +143,7 @@ register_bindings_datetime <- function() {
       } else {
         format <- "%B"
       }
-      return(build_expr("strftime", x, options = list(format = format, locale = locale)))
+      return(build_expr("strftime", x, options = list(format = format, locale = check_time_locale(locale))))
     }
 
     build_expr("month", x)
